Bug 215039 - Increased shutdown time
Summary: Increased shutdown time
Status: CLOSED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Block Layer (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jens Axboe
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-15 20:59 UTC by loqs
Modified: 2021-11-15 21:36 UTC (History)
0 users

See Also:
Kernel Version: 5.16-rc1
Subsystem:
Regression: No
Bisected commit-id:


Attachments
git bisect log for the issue (2.86 KB, text/plain)
2021-11-15 20:59 UTC, loqs
Details
kernel config (117.25 KB, text/plain)
2021-11-15 21:01 UTC, loqs
Details
dmesg for 5.16-rc1 (85.01 KB, text/plain)
2021-11-15 21:03 UTC, loqs
Details
Fix failure to put queue (976 bytes, patch)
2021-11-15 21:08 UTC, Jens Axboe
Details | Diff

Description loqs 2021-11-15 20:59:05 UTC
Created attachment 299587 [details]
git bisect log for the issue

Shutdown / reboot takes appropriately half a minute extra to complete with 5.16-rc1
Bisected to b637108a4022951dcc71b672bd101ebe24ad26d5 blk-mq: fix filesystem I/O request allocation
5.16-rc1 with just that commit reverted does not have the issue.

I tried applying https://lore.kernel.org/linux-block/20211115075650.578051-1-ming.lei@redhat.com/ and the issue was still present
Comment 1 Jens Axboe 2021-11-15 21:01:28 UTC
What storage devices are you using? A dmesg from a fresh boot would be interesting to see, including a mount output.
Comment 2 loqs 2021-11-15 21:01:49 UTC
Created attachment 299589 [details]
kernel config
Comment 3 loqs 2021-11-15 21:03:25 UTC
Created attachment 299591 [details]
dmesg for 5.16-rc1
Comment 4 Jens Axboe 2021-11-15 21:08:36 UTC
Created attachment 299593 [details]
Fix failure to put queue
Comment 5 Jens Axboe 2021-11-15 21:08:52 UTC
Can you try the attached patch?
Comment 6 loqs 2021-11-15 21:16:07 UTC
With put.patch applied to 5-16-rc1 the issue is resolved.

Thank you for the incredibly fast response.
Comment 7 Jens Axboe 2021-11-15 21:21:23 UTC
Awesome, thanks for the quick testing. I'd like to add attribution in the patch for how reported and tested the issue. If you give me your real name and email, I can put that in there when posting it.
Comment 8 loqs 2021-11-15 21:30:27 UTC
Stephen Smith stephenmsmith@blueyonder.co.uk
Comment 9 Jens Axboe 2021-11-15 21:36:09 UTC
Great, thanks. Sent out for review and also queued up in the below branch:

https://git.kernel.dk/cgit/linux-block/log/?h=block-5.16

I'll close this issue now.

Note You need to log in before you can comment on or make changes to this bug.